Fix font selection for whitespace chars
DEVSIX-9212